# enotation

./: .gitignore  Cargo.toml  LICENSE  README.md  insta.yaml  notation.pest
.github/workflows/: rust.yml
src/: lib.rs  lib_old.rs  tests.rs
src/container/: list.rs  mod.rs  object.rs  set.rs  unamed_object.rs  vector.rs
src/container/tests/: list.rs  mod.rs  object.rs  set.rs  unamed_object.rs  vector.rs
src/literal/: mod.rs  test.rs
src/quoting/: mod.rs  tests.rs
src/syntaxing/: mod.rs  tests.rs
