[package]
name = "enotation"
version = "0.1.2"
edition = "2021"
license-file = "LICENSE"
description = "Extended s-notation"
homepage = "https://github.com/dannypsnl/enotation"
repository = "https://github.com/dannypsnl/enotation"
readme = "README.md"

[dependencies]
ariadne = { version = "0.5.0", features = ["concolor"] }
num = "0.4.3"
pest = "2.7.15"
pest_derive = "2.7.15"
from-pest = "0.3"
pest-ast = "0.3.5"
serde = "1.0.217"

[dev-dependencies]
insta = { version = "1.42.0", features = ["yaml"] }
